creating banner, fixing styling to align with customer demands

--- a/src/app/nav/nav.component.css
+++ b/src/app/nav/nav.component.css
@@ -1,3 +1,5 @@
 .nav-item:hover {
-  background-color: #afc0d1;
+  background-color: #ffa8a8;
+
+  
 }
